--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/cli": "^7.4.2",
+    "@capacitor/core": "^7.4.2",
     "@cloudflare/speedtest": "^1.5.1",
     "@mantine/core": "^8.1.3",
     "@mantine/hooks": "^8.1.3",
