--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "benjsspeedtest",
   "private": true,
-  "version": "1.0.1",
+  "version": "1.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
@@ -13,6 +13,7 @@
     "@capacitor/android": "^7.4.2",
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
+    "@capacitor/ios": "^7.4.2",
     "@cloudflare/speedtest": "^1.5.1",
     "@mantine/core": "^8.1.3",
     "@mantine/hooks": "^8.1.3",
