--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "benjsspeedtest",
   "private": true,
-  "version": "1.0.3",
+  "version": "1.0.8",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && npx cap sync",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.2",
+    "@capacitor/app": "^7.0.1",
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/ios": "^7.4.2",
-    "@cloudflare/speedtest": "^1.5.1",
-    "@mantine/core": "^8.1.3",
-    "@mantine/hooks": "^8.1.3",
+    "@cloudflare/speedtest": "latest",
+    "@mantine/core": "latest",
+    "@mantine/hooks": "latest",
+    "@ookla/speedtest-js-sdk": "^1.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "latest",
+    "react-router-dom": "^7.7.1",
+    "universal-speedtest": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
